Fixed parallax added. Srolling bug: background img not centered

--- a/client/src/components/LandingHero/LandingHero.css
+++ b/client/src/components/LandingHero/LandingHero.css
@@ -1,12 +1,40 @@
 .jumbotron {
-	background: url("./forte.jpg") center center;
+	background: url("./forte.jpg");
+	background-position: center center;
+	background-attachment: fixed;
+	background-repeat: repeat;
 	background-size: cover;
 	height: 100vh;
 	padding-top: 0;
+	margin-bottom: 0;
+}
+
+.parallax-jumbotron {
 }
 
 .jumbotron-contents {
 	color: white;
 	text-shadow: black 0.1em 0.1em;
 	padding-top: 33vh;
+}
+
+.home {
+	/*background: url(forte.jpg) center center;
+	background-attachment: fixed;
+	background-repeat: repeat;
+	min-height: 1000px;
+	font-size: 100px;
+	color: white;*/
+	background: url("./forte.jpg") center center;
+	background-attachment: fixed;
+	background-repeat: repeat;
+	background-size: cover;
+	height: 100vh;
+	padding-top: 0;
+	margin-bottom: 0;
+}
+
+#about {
+	background: url(forte.jpg) 50% 0 no-repeat;
+	min-height: 1000px;
 }
